samples/_failures_safe/1761158219_c68ff9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3520277.c: In function ‘free_graph’:
./samples/SAFE/__tmp_b3520277.c:187: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_b3520277.c:186:17: error: expected declaration or statement at end of input
  186 |                 while
      |                 ^~~~~
./samples/SAFE/__tmp_b3520277.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b3520277.c:186:17: error: expected declaration or statement at end of input
